# ai-analyzer

./: README.md  pyproject.toml
src/ai_trader/: __init__.py  domain.py  events.py  ports.py
